<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/removeDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/removeDialogueTitleView" />

    <ListView
        android:layout_width="match_parent"
        android:id="@+id/removableCompletionsListView"
        android:clickable="true"
        android:layout_height="300dp" />

    <Button
        android:text="@string/deleteHabitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/deleteHabitButton" />

    <Button
        android:text="@string/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cancelButton" />
</LinearLayout>